added posts and recent comments

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -3,6 +3,7 @@
 	<div class='navbar navbar-default' role='navigation'>
 		<ul class='nav navbar-nav'>
 		<li>{{#link-to 'posts'}}Posts{{/link-to}}</li>
+		<li>{{#link-to 'recent-comments'}}Recent Comments{{/link-to}}</li>
 		<li>{{#link-to 'about'}}About{{/link-to}}</li>
 		<li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
 		</ul>
