--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -2,8 +2,8 @@
 	<h1>Dracula's Blog</h1>
 
 	<ul>
-		<li><a href="#">I love cookies!</a></li>
-		<li><a href="#">I love pies!</a></li>
-		<li><a href="#">I love chips!</a></li>
+		{{#each}}
+			<li>{{#link-to 'post' this.id}}{{title}}{{/link-to}}</li>
+		{{/each}}
 	</ul>
 </div>
